Successfully implemented fragments.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,13 +6,9 @@
     tools:context="com.bearsoft.pokeassistant.main.MainActivity"
     tools:ignore="MergeRootFrame" >
 
-     <com.bearsoft.pokeassistant.views.TouchImageView
-        android:id="@+id/type_chart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/abc_ab_stacked_transparent_dark_holo"
-        android:contentDescription="Pokemon Type Matchup Chart" />
+     <fragment android:name="com.bearsoft.pokeassistant.main.ChartFragment"
+         android:id="@+id/fragment_chart"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent" />
     
     </RelativeLayout>
