--- a/res/menu/type_chart.xml
+++ b/res/menu/type_chart.xml
@@ -3,7 +3,7 @@
     
 	<item 
 	    android:id="@+id/game_info_box"
-	    android:showAsAction="ifRoom"
+	    android:showAsAction="always"
 	    android:title="Gen Info"/>
     
 </menu>
