--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/lib/com.google.android.gms.ads"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
@@ -6,6 +8,15 @@
     tools:context="com.bearsoft.pokeassistant.main.MainActivity"
     tools:ignore="MergeRootFrame" >
 
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adUnitId="ca-app-pub-1577800667746091/3361312561"
+        ads:adSize="BANNER"
+        />
+    
      <fragment android:name="com.bearsoft.pokeassistant.main.ChartFragment"
          android:id="@+id/fragment_chart"
          android:layout_width="match_parent"
