Ad is not longer covered when zooming into a type chart

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
      <fragment android:name="com.bearsoft.pokeassistant.main.ChartFragment"
          android:id="@+id/fragment_chart"
          android:layout_width="match_parent"
-         android:layout_height="match_parent" />
+         android:layout_height="match_parent" 
+         android:layout_below="@+id/adView"/>
     
     </RelativeLayout>
