--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bearsoft.pokeassistant.main.MainActivity"
+    tools:context="net.bearsoft.pokeassistant.MainActivity"
     tools:ignore="MergeRootFrame" >
 
     <com.google.android.gms.ads.AdView
@@ -17,7 +17,7 @@
         ads:adSize="BANNER"
         />
     
-     <fragment android:name="com.bearsoft.pokeassistant.main.ChartFragment"
+     <fragment android:name="net.bearsoft.pokeassistant.PokedexFragment"
          android:id="@+id/fragment_chart"
          android:layout_width="match_parent"
          android:layout_height="match_parent" 
